include/El/core/DistMatrix.h

/* NOTE: "ElInt* rowInd" and "ElInt* colInd" have been converted to 
         "ElInt* rowInd" and "ElInt* colInd" due to what appears to be a bug
         in /usr/bin/c++ in Ubuntu */

typedef struct 
{
    ElDist colDist, rowDist;
    int colAlign, rowAlign;
    int root;
    ElConstGrid grid;
} ElElementalData;
/* An anonymous struct meant as a placeholder for ElementalMatrix<T>
   ----------------------------------------------------------------- */
typedef struct ElDistMatrix_iDummy* ElDistMatrix_i;
typedef struct ElDistMatrix_sDummy* ElDistMatrix_s;
typedef struct ElDistMatrix_dDummy* ElDistMatrix_d;
typedef struct ElDistMatrix_cDummy* ElDistMatrix_c;
typedef struct ElDistMatrix_zDummy* ElDistMatrix_z;
typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* void AbstractDistMatrix<T>::UpdateImagPart( Int i, Int j, Base<T> alpha )
   ------------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixUpdateImagPart_c
( ElDistMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElDistMatrixUpdateImagPart_z
( ElDistMatrix_z A, ElInt i, ElInt j, double alpha );
/* void AbstractDistMatrix<T>::MakeReal( Int i, Int j )
   ---------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixMakeReal_c( ElDistMatrix_c A, ElInt i, ElInt j );
EL_EXPORT ElError ElDistMatrixMakeReal_z( ElDistMatrix_z A, ElInt i, ElInt j );
/* void AbstractDistMatrix<T>::Conjugate( Int i, Int j )
   ----------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixConjugate_c( ElDistMatrix_c A, ElInt i, ElInt j );
EL_EXPORT ElError ElDistMatrixConjugate_z( ElDistMatrix_z A, ElInt i, ElInt j );
/* void AbstractDistMatrix<T>::Reserve( Int numRemoteEntries )
   ----------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixReserve_i
( ElDistMatrix_i A, ElInt numRemoteEntries );
EL_EXPORT ElError ElDistMatrixReserve_s
( ElDistMatrix_s A, ElInt numRemoteEntries );
EL_EXPORT ElError ElDistMatrixReserve_d
( ElDistMatrix_d A, ElInt numRemoteEntries );
EL_EXPORT ElError ElDistMatrixReserve_c
( ElDistMatrix_c A, ElInt numRemoteEntries );
EL_EXPORT ElError ElDistMatrixReserve_z
( ElDistMatrix_z A, ElInt numRemoteEntries );
/* void AbstractDistMatrix<T>::QueueUpdate( Int i, Int j, T value )
   ---------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixQueueUpdate_i
( ElDistMatrix_i A, ElInt i, ElInt j, ElInt value );
EL_EXPORT ElError ElDistMatrixQueueUpdate_s
( ElDistMatrix_s A, ElInt i, ElInt j, float value );
EL_EXPORT ElError ElDistMatrixQueueUpdate_d
( ElDistMatrix_d A, ElInt i, ElInt j, double value );
EL_EXPORT ElError ElDistMatrixQueueUpdate_c
( ElDistMatrix_c A, ElInt i, ElInt j, complex_float value );
EL_EXPORT ElError ElDistMatrixQueueUpdate_z
( ElDistMatrix_z A, ElInt i, ElInt j, complex_double value );
/* void AbstractDistMatrix<T>::ProcessQueues()
   ------------------------------------------- */
EL_EXPORT ElError ElDistMatrixProcessQueues_i( ElDistMatrix_i A );
EL_EXPORT ElError ElDistMatrixProcessQueues_s( ElDistMatrix_s A );
EL_EXPORT ElError ElDistMatrixProcessQueues_d( ElDistMatrix_d A );
EL_EXPORT ElError ElDistMatrixProcessQueues_c( ElDistMatrix_c A );
EL_EXPORT ElError ElDistMatrixProcessQueues_z( ElDistMatrix_z A );
/* void AbstractDistMatrix<T>::ReservePulls( Int numPulls ) const
   -------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixReservePulls_i
( ElConstDistMatrix_i A, ElInt numPulls );
EL_EXPORT ElError ElDistMatrixReservePulls_s
( ElConstDistMatrix_s A, ElInt numPulls );
EL_EXPORT ElError ElDistMatrixReservePulls_d
( ElConstDistMatrix_d A, ElInt numPulls );
EL_EXPORT ElError ElDistMatrixReservePulls_c
( ElConstDistMatrix_c A, ElInt numPulls );
EL_EXPORT ElError ElDistMatrixReservePulls_z
( ElConstDistMatrix_z A, ElInt numPulls );
/* void AbstractDistMatrix<T>::QueuePull( Int i, Int j ) const
   ----------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixQueuePull_i
( ElConstDistMatrix_i A, ElInt i, ElInt j );
EL_EXPORT ElError ElDistMatrixQueuePull_s
( ElConstDistMatrix_s A, ElInt i, ElInt j );
EL_EXPORT ElError ElDistMatrixQueuePull_d
( ElConstDistMatrix_d A, ElInt i, ElInt j );
EL_EXPORT ElError ElDistMatrixQueuePull_c
( ElConstDistMatrix_c A, ElInt i, ElInt j );
EL_EXPORT ElError ElDistMatrixQueuePull_z
( ElConstDistMatrix_z A, ElInt i, ElInt j );
/* void AbstractDistMatrix<T>::ProcessPullQueue( T* pullBuf ) const
   ---------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixProcessPullQueue_i
( ElConstDistMatrix_i A, ElInt* pullBuf );
EL_EXPORT ElError ElDistMatrixProcessPullQueue_s
( ElConstDistMatrix_s A, float* pullBuf );
EL_EXPORT ElError ElDistMatrixProcessPullQueue_d
( ElConstDistMatrix_d A, double* pullBuf );
EL_EXPORT ElError ElDistMatrixProcessPullQueue_c
( ElConstDistMatrix_c A, complex_float* pullBuf );
EL_EXPORT ElError ElDistMatrixProcessPullQueue_z
( ElConstDistMatrix_z A, complex_double* pullBuf );
/* bool ElementalMatrix<T>::DiagonalAlignedWith
   ( const DistData& data, Int offset ) const
   -------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDiagonalAlignedWith_i
( ElConstDistMatrix_i A, ElElementalData distData, ElInt offset,
  bool* aligned );
EL_EXPORT ElError ElDistMatrixDiagonalAlignedWith_s
( ElConstDistMatrix_s A, ElElementalData distData, ElInt offset,
  bool* aligned );
EL_EXPORT ElError ElDistMatrixDiagonalAlignedWith_d
( ElConstDistMatrix_d A, ElElementalData distData, ElInt offset,
  bool* aligned );
EL_EXPORT ElError ElDistMatrixDiagonalAlignedWith_c
( ElConstDistMatrix_c A, ElElementalData distData, ElInt offset,
  bool* aligned );
EL_EXPORT ElError ElDistMatrixDiagonalAlignedWith_z
( ElConstDistMatrix_z A, ElElementalData distData, ElInt offset,
  bool* aligned );
/* int ElementalMatrix<T>::DiagonalRoot( Int offset ) const
   -------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDiagonalRoot_i
( ElConstDistMatrix_i A, ElInt offset, int* root );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_s
( ElConstDistMatrix_s A, ElInt offset, int* root );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_d
( ElConstDistMatrix_d A, ElInt offset, int* root );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_c
( ElConstDistMatrix_c A, ElInt offset, int* root );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_z
( ElConstDistMatrix_z A, ElInt offset, int* root );
/* int ElementalMatrix<T>::DiagonalAlign( Int offset ) const
   --------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDiagonalRoot_i
( ElConstDistMatrix_i A, ElInt offset, int* align );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_s
( ElConstDistMatrix_s A, ElInt offset, int* align );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_d
( ElConstDistMatrix_d A, ElInt offset, int* align );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_c
( ElConstDistMatrix_c A, ElInt offset, int* align );
EL_EXPORT ElError ElDistMatrixDiagonalRoot_z
( ElConstDistMatrix_z A, ElInt offset, int* align );