python/core/DistMatrix.py


  lib.ElDistMatrixUpdateImagPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElDistMatrixUpdateImagPart_z.argtypes = [c_void_p,iType,iType,dType]
  def UpdateImagPart(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == cTag: lib.ElDistMatrixUpdateImagPart_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixUpdateImagPart_z(*args)
    else: raise Exception('Cannot update imaginary part of a real datatype')

  lib.ElDistMatrixMakeReal_c.argtypes = \
  lib.ElDistMatrixMakeReal_z.argtypes = \
    [c_void_p,iType,iType]
  def MakeReal(self,i,j):
    args = [self.obj,i,j]
    if   self.tag == cTag: lib.ElDistMatrixMakeReal_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixMakeReal_z(*args)

  lib.ElDistMatrixConjugate_c.argtypes = \
  lib.ElDistMatrixConjugate_z.argtypes = \
    [c_void_p,iType,iType]
  def Conjugate(self,i,j):
    args = [self.obj,i,j]
    if   self.tag == cTag: lib.ElDistMatrixConjugate_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixConjugate_z(*args)

  lib.ElDistMatrixReserve_i.argtypes = \
  lib.ElDistMatrixReserve_s.argtypes = \
  lib.ElDistMatrixReserve_d.argtypes = \
  lib.ElDistMatrixReserve_c.argtypes = \
  lib.ElDistMatrixReserve_z.argtypes = \
    [c_void_p,iType]
  def Reserve(self,numRemoteEntries):
    args = [self.obj,numRemoteEntries]
    if   self.tag == iTag: lib.ElDistMatrixReserve_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixReserve_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixReserve_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixReserve_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixReserve_z(*args)
    else: DataExcept()

  lib.ElDistMatrixQueueUpdate_i.argtypes = [c_void_p,iType,iType,iType]
  lib.ElDistMatrixQueueUpdate_s.argtypes = [c_void_p,iType,iType,sType]
  lib.ElDistMatrixQueueUpdate_d.argtypes = [c_void_p,iType,iType,dType]
  lib.ElDistMatrixQueueUpdate_c.argtypes = [c_void_p,iType,iType,cType]
  lib.ElDistMatrixQueueUpdate_z.argtypes = [c_void_p,iType,iType,zType]
  def QueueUpdate(self,i,j,value):
    args = [self.obj,i,j,value]
    if   self.tag == iTag: lib.ElDistMatrixQueueUpdate_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixQueueUpdate_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixQueueUpdate_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixQueueUpdate_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixQueueUpdate_z(*args)
    else: DataExcept()

  lib.ElDistMatrixProcessQueues_i.argtypes = \
  lib.ElDistMatrixProcessQueues_s.argtypes = \
  lib.ElDistMatrixProcessQueues_d.argtypes = \
  lib.ElDistMatrixProcessQueues_c.argtypes = \
  lib.ElDistMatrixProcessQueues_z.argtypes = \
    [c_void_p]
  def ProcessQueues(self):
    args = [self.obj]
    if   self.tag == iTag: lib.ElDistMatrixProcessQueues_i(*args) 
    elif self.tag == sTag: lib.ElDistMatrixProcessQueues_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixProcessQueues_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixProcessQueues_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixProcessQueues_z(*args)
    else: DataExcept()

  lib.ElDistMatrixReservePulls_i.argtypes = \
  lib.ElDistMatrixReservePulls_s.argtypes = \
  lib.ElDistMatrixReservePulls_d.argtypes = \
  lib.ElDistMatrixReservePulls_c.argtypes = \
  lib.ElDistMatrixReservePulls_z.argtypes = \
    [c_void_p,iType]
  def ReservePulls(self,numPulls):
    args = [self.obj,numPulls]
    if   self.tag == iTag: lib.ElDistMatrixReservePulls_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixReservePulls_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixReservePulls_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixReservePulls_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixReservePulls_z(*args)
    else: DataExcept()

  lib.ElDistMatrixQueuePull_i.argtypes = \
  lib.ElDistMatrixQueuePull_s.argtypes = \
  lib.ElDistMatrixQueuePull_d.argtypes = \
  lib.ElDistMatrixQueuePull_c.argtypes = \
  lib.ElDistMatrixQueuePull_z.argtypes = \
    [c_void_p,iType,iType]
  def QueuePull(self,i,j):
    args = [self.obj,i,j]
    if   self.tag == iTag: lib.ElDistMatrixQueuePull_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixQueuePull_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixQueuePull_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixQueuePull_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixQueuePull_z(*args)
    else: DataExcept()

  lib.ElDistMatrixProcessPullQueue_i.argtypes = [c_void_p,POINTER(iType)]
  lib.ElDistMatrixProcessPullQueue_s.argtypes = [c_void_p,POINTER(sType)]
  lib.ElDistMatrixProcessPullQueue_d.argtypes = [c_void_p,POINTER(dType)]
  lib.ElDistMatrixProcessPullQueue_c.argtypes = [c_void_p,POINTER(cType)]
  lib.ElDistMatrixProcessPullQueue_z.argtypes = [c_void_p,POINTER(zType)]
  def ProcessPullQueue(self,buf):
    args = [self.obj,buf]
    if   self.tag == iTag: lib.ElDistMatrixProcessPullQueue_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixProcessPullQueue_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixProcessPullQueue_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixProcessPullQueue_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixProcessPullQueue_z(*args)
    else: DataExcept()

  def GetLocal(self,iLoc,jLoc): 
    return self.LockedMatrix().Get(iLoc,jLoc)

  def GetLocalRealPart(self,iLoc,jLoc): 
    return self.LockedMatrix().GetRealPart(iLoc,jLoc)

  def GetLocalImagPart(self,iLoc,jLoc):
    return self.LockedMatrix().GetImagPart(iLoc,jLoc)

  def SetLocal(self,iLoc,jLoc,value):
    self.Matrix().Set(iLoc,jLoc,value)

  def SetLocalRealPart(self,iLoc,jLoc,value):
    self.Matrix().SetRealPart(iLoc,jLoc,value)

  def SetLocalImagPart(self,iLoc,jLoc,value):
    self.Matrix().SetImagPart(iLoc,jLoc,value)

  def UpdateLocal(self,iLoc,jLoc,value):
    self.Matrix().Update(iLoc,jLoc,value)

  def UpdateLocalRealPart(self,iLoc,jLoc,value):
    self.Matrix().UpdateRealPart(iLoc,jLoc,value)

  def UpdateLocalImagPart(self,iLoc,jLoc,value):
    self.Matrix().UpdateImagPart(iLoc,jLoc,value)

  lib.ElDistMatrixDiagonalAlignedWith_i.argtypes = \
  lib.ElDistMatrixDiagonalAlignedWith_s.argtypes = \
  lib.ElDistMatrixDiagonalAlignedWith_d.argtypes = \
  lib.ElDistMatrixDiagonalAlignedWith_c.argtypes = \
  lib.ElDistMatrixDiagonalAlignedWith_z.argtypes = \
    [c_void_p,DistData,iType,POINTER(bType)]
  def DiagonalAlignedWith(distData,offset=0):
    aligned = bType()
    args = [self.obj,distData,offset,pointer(aligned)]
    if   self.tag == iTag: lib.ElDistMatrixDiagonalAlignedWith_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDiagonalAlignedWith_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDiagonalAlignedWith_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDiagonalAlignedWith_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDiagonalAlignedWith_z(*args)
    else: DataExcept()
    return aligned.value

  lib.ElDistMatrixDiagonalRoot_i.argtypes = \
  lib.ElDistMatrixDiagonalRoot_s.argtypes = \
  lib.ElDistMatrixDiagonalRoot_d.argtypes = \
  lib.ElDistMatrixDiagonalRoot_c.argtypes = \
  lib.ElDistMatrixDiagonalRoot_z.argtypes = \
    [c_void_p,iType,POINTER(c_int)]
  def DiagonalRoot(self,offset=0):
    root = c_int()
    args = [self.obj,offset,pointer(root)]
    if   self.tag == iTag: lib.ElDistMatrixDiagonalRoot_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDiagonalRoot_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDiagonalRoot_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDiagonalRoot_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDiagonalRoot_z(*args)
    else: DataExcept()
    return root.value

  lib.ElDistMatrixDiagonalAlign_i.argtypes = \
  lib.ElDistMatrixDiagonalAlign_s.argtypes = \
  lib.ElDistMatrixDiagonalAlign_d.argtypes = \
  lib.ElDistMatrixDiagonalAlign_c.argtypes = \
  lib.ElDistMatrixDiagonalAlign_z.argtypes = \
    [c_void_p,iType,POINTER(c_int)]
  def DiagonalAlign(self,offset=0):
    align = c_int()
    args = [self.obj,offset,pointer(align)]
    if   self.tag == iTag: lib.ElDistMatrixDiagonalAlign_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDiagonalAlign_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDiagonalAlign_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDiagonalAlign_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDiagonalAlign_z(*args)
    else: DataExcept()
    return align.value

  lib.ElViewDist_i.argtypes = \
  lib.ElViewDist_s.argtypes = \
  lib.ElViewDist_d.argtypes = \
  lib.ElViewDist_c.argtypes = \
  lib.ElViewDist_z.argtypes = \
  lib.ElLockedViewDist_i.argtypes = \
  lib.ElLockedViewDist_s.argtypes = \
  lib.ElLockedViewDist_d.argtypes = \
  lib.ElLockedViewDist_c.argtypes = \
  lib.ElLockedViewDist_z.argtypes = \
    [c_void_p,c_void_p,IndexRange,IndexRange]
  def __getitem__(self,indTup):
    iInd, jInd = indTup
    if isinstance(iInd,slice):
      if iInd.start == None:
        iInd = slice(0,iInd.stop,iInd.step)
      if iInd.stop == None:
        iInd = slice(iInd.start,self.Height(),iInd.step)
    if isinstance(jInd,slice):
      if jInd.start == None:
        jInd = slice(0,jInd.stop,jInd.step) 
      if jInd.stop == None:
        jInd = slice(jInd.start,self.Width(),jInd.step)
    iRan = IndexRange(iInd)
    jRan = IndexRange(jInd)
    distData = self.GetDistData()
    ASub = DistMatrix(self.tag,distData.colDist,distData.rowDist,self.Grid())
    args = [ASub.obj,self.obj,iRan,jRan]
    if self.Locked():
      if   self.tag == iTag: lib.ElLockedViewDist_i(*args)
      elif self.tag == sTag: lib.ElLockedViewDist_s(*args)
      elif self.tag == dTag: lib.ElLockedViewDist_d(*args)
      elif self.tag == cTag: lib.ElLockedViewDist_c(*args)
      elif self.tag == zTag: lib.ElLockedViewDist_z(*args)
      else: DataExcept()
    else:
      if   self.tag == iTag: lib.ElViewDist_i(*args)
      elif self.tag == sTag: lib.ElViewDist_s(*args)
      elif self.tag == dTag: lib.ElViewDist_d(*args)
      elif self.tag == cTag: lib.ElViewDist_c(*args)
      elif self.tag == zTag: lib.ElViewDist_z(*args)
      else: DataExcept()
    return ASub
